--- a/administrator/templates/library_edit.html
+++ b/administrator/templates/library_edit.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
 </head>
 <body>
-<h1>Edit library</h1>
+<h1>Edit Libraries</h1>
 </body>
 </html>
