--- a/administrator/templates/library_list.html
+++ b/administrator/templates/library_list.html
@@ -3,8 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 <body>
-<h1>Available libraries</h1>
+<h3 align="center">Library List</h3>
+<div class="container">
+    <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4">
+            <form action="{%url 'listlibrary' %}" method="post">
+                {%csrf_token%}
+                {{ form.as_p }}
+
+
+                <button type="submit" class="btn btn-primary">Listlibraries</button>
+
+            </form>
+        </div>
+        <div class="col-4"></div>
+    </div>
+</div>
+
 </body>
 </html>
