--- a/administrator/templates/register.html
+++ b/administrator/templates/register.html
@@ -3,13 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 <body>
-<form action="{%url 'signup' %}" method="post">
+<h3 align="center">Sign Up</h3>
+<div class="container">
+    <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4">
+            <form action="{%url 'signup' %}" method="post">
     {%csrf_token%}
     {{ form.as_p }}
     <input type="submit" value="register">
 
 </form>
+        </div>
+        <div class="col-4"></div>
+    </div>
+</div>
+
 </body>
 </html>
