--- a/guest/templates/review.html
+++ b/guest/templates/review.html
@@ -5,26 +5,25 @@
     <title>Title</title>
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 <body>
-
-<h3 align="center">Add Libraries</h3>
+<h3 align="center">Guest Review</h3>
 <div class="container">
     <div class="row">
         <div class="col-4"></div>
         <div class="col-4">
-            <form action="{%url 'addlibrary' %}" method="post">
+            <form action="{%url 'addreview' %}" method="post">
                 {%csrf_token%}
                 {{ form.as_p }}
 
 
-                <button type="submit" class="btn btn-success">Addlibrary</button>
+                <button type="submit" class="btn btn-success">Addreview</button>
 
             </form>
         </div>
         <div class="col-4"></div>
     </div>
 </div>
-
 </body>
 </html>
